fix z-index

--- a/app/component/navigation.scss
+++ b/app/component/navigation.scss
@@ -37,7 +37,7 @@ $content-background-color: $background-color;
   background: $primary-color;
   text-align: center;
   overflow: visible; // Show drawer menu
-  z-index: 803;
+  z-index: 1001;
   line-height: 35px;
 
   // Fixed navbar height for now, as dynamic height leads to Safari issues
